[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/interface/game/LocationUI.gd" type="Script" id=1]


[node name="LocationUI" type="HBoxContainer" groups=[
"LocationUI",
]]
margin_right = 80.0
margin_bottom = 55.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column1" type="VBoxContainer" parent="."]
margin_right = 38.0
margin_bottom = 122.0
size_flags_horizontal = 3

[node name="Cell" type="Label" parent="Column1"]
margin_right = 38.0
margin_bottom = 14.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainCode" type="Label" parent="Column1"]
margin_top = 18.0
margin_right = 38.0
margin_bottom = 32.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Types" type="Label" parent="Column1"]
margin_top = 36.0
margin_right = 38.0
margin_bottom = 50.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecruitFrom" type="Label" parent="Column1"]
margin_top = 54.0
margin_right = 38.0
margin_bottom = 68.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecruitOnto" type="Label" parent="Column1"]
margin_top = 72.0
margin_right = 38.0
margin_bottom = 86.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heals" type="Label" parent="Column1"]
margin_top = 90.0
margin_right = 38.0
margin_bottom = 104.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TownSize" type="Label" parent="Column1"]
margin_top = 108.0
margin_right = 38.0
margin_bottom = 122.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column2" type="VBoxContainer" parent="."]
margin_left = 42.0
margin_right = 80.0
margin_bottom = 122.0
size_flags_horizontal = 3

[node name="Unit" type="Label" parent="Column2"]
margin_right = 38.0
margin_bottom = 14.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}
